<resources>
    <string name="app_name">Limitr</string>
    <string name="limitize">Limitize</string>
    <string name="welcome">Limitr Welcomes You!</string>
    <string name="Continue"> Continue with Google </string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="storage_rationale">This app needs access to your Storage to Upload Picture.</string>
    <string name="DrawOverOtherApps">This app needs permission to display over other apps in order to perform its functions</string>
    <string name="AccessibilityService">This apps needs Accessibility Service enabled for app launch detection.</string>
    <string name="Help">You May need Help! Click Here</string>
    <string name="usageSateManagerSate">This apps needs to read app usage state to give user the proper stats.</string>
    <string name="NotificationBlock">This app needs permission to Listen the Notifications to block the Notifications.</string>
    <string name="turn_on_internet">Please Turn on Internet!</string>
    <string name="usage">Usage:</string>
    <string name="set_timer">Set Timer</string>
    <string name="app_size">App Size:</string>
    <string name="sharedPref_status_Insert">Insert</string>
    <string name="sharedPref_status_Update">Update</string>
    <string name="start_timer">Start Timer</string>
    <string name="accessibility_service_label">Accessibility Service</string>
    <string name="accessibility_service_description">Accessibility Service for App Launch.</string>
    <string name="permission_required">Permission Required</string>
    <string name="internet_required">Internet Required</string>
    <string name="reward">Claim Crypto</string>
    <string name="notification_status">Notification Status</string>
    <string name="duration">Duration</string>
    <string name="blocked_for">Blocked For</string>
    <string name="unblock_app">Unblock App</string>
    <string name="blocked">Blocked</string>
    <string name="limited">Limited</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="app_blocked">App Blocked</string>
    <string name="no_apps_are_blocked">No Apps are Blocked!</string>
    <string name="mySharePrefs">My SharePref</string>
    <string name="daily_Login_Reward">Daily Login Reward</string>
    <string name="last_logged_date">Last Logged Date</string>
    <string name="set_limit">Set Limit</string>
    <string name="block_notification">Block Notification</string>
    <string name="or">Or</string>
    <string name="set_interval">Set Interval</string>
    <string name="not_enough_crypto">"Not enough Crypto"</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="all_apps">All Apps</string>
    <string name="blocked_apps">Blocked Apps</string>
    <string name="Granted">Granted</string>
    <string name="my_sharedPref">My SharePref</string>
    <string name="_1">1</string>
    <string name="ask_notification_block">Do You want to Block the notification as well ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dataStore">Data_Store</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="network_Error">Network Error</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="account_created">Account Created</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="UserProfileImages">UserProfileImages</string>
    <string name="packageName">packageName</string>
    <string name="appName">appName</string>
    <string name="click_here_for_more_details">Click Here For More Details</string>
    <string name="exit">EXIT</string>
    <string name="icon_image">Icon Image</string>
    <string name="cancel">Cancel</string>
    <string name="one">1</string>
    <string name="first_login_reward">First Login Reward</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="help_instructions">Help Instructions</string>
    <string name="for_android_version_below_13">For Android version below 13:</string>
    <string name="_1_go_to_downloaded_services">1. Try Finding Limitr if not found,
        Go to \'Downloaded Services\'</string>
    <string name="_2_find_limitr_and_enable_permission">2. Find \'Limitr\' and enable permission</string>
    <string name="for_android_version_13_and_above">For Android version 13 and above:</string>
    <string name="_1_go_to_app_management_or_app_in_settings">1. Go to \'App Management\' or \'App\' in Settings</string>
    <string name="_2_find_limitr_and_tap_the_three_dot_menu">2. Find \'Limitr\' and tap the three-dot menu</string>
    <string name="_3_allow_restricted_permissions">3. Allow restricted permissions</string>
    <string name="_4_come_back_to_limitr_and_grant_accessibility_service_permission">4. Come back to Limitr and Grant accessibility service permission</string>
    <string name="_5_find_downloaded_apps_or_service_and_enable_permission">5. Find \'Downloaded Apps\' or \'Service\' and enable permission</string>
    <string name="is_currently_blocked">is Currently Blocked!</string>
    <string name="watch_a_video">Watch a Video</string>

    <string name="app_accessibility_service_disclosure">App Accessibility Service Disclosure</string>
    <string name="_1_app_launch_detection">1. App Functionality</string>
    <string name="we_use_the_accessibilityservice_to_detect_when_blocked_apps_are_launched_and_provide_the_functionality_to_block_their_access_temporarily_this_feature_helps_you_stay_focused_and_manage_your_app_usage_effectively">We use the AccessibilityService to detect when blocked apps are launched and provide the functionality to block their access temporarily. This feature helps you stay focused and manage your app usage effectively.</string>
    <string name="how_do_limitr_use_accessibility_service">How and Why Do Limitr Use Accessibility Service?</string>
    <string name="_2_your_privacy_and_data_security">2.Your Privacy and Data Security</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="we_are_committed_to_providing_a_safe_and_reliable_app_experience_for_our_users_thank_you_for_choosing_limitr_and_we_appreciate_your_trust_in_us">We are committed to providing a safe and reliable app experience for our users. Thank you for choosing Limitr, and we appreciate your trust in us.</string>
    <string name="i_agree_to_grant_limitr_access_to_the_accessibility_service">I agree to grant Limitr access to the Accessibility Service</string>
    <string name="if_you_do_not_wish_to_use_the_accessibilityservice_feature_you_can_disable_it_at_any">If you do not wish to use the AccessibilityService feature, you can disable it at any time or deny it here.</string>
    <string name="by_using_limitr_your_consent_to_the_use_of_the_accessibilityservice_for_the_stated_purpose_of_enhancing_your_app_experience">By using Limitr, your consent to the use of the AccessibilityService for the stated purpose of enhancing your app experience.</string>
    <string name="your_consent_matters">Your Consent Matters</string>
    <string name="local_processing_all_app_blocking_decisions_are_made_locally_on_your_device_and_no_data_is_sent_to_our_servers">Local Processing: All app blocking decisions are made locally on your device, and no data is sent to our servers.</string>
    <string name="permission_control_limitr_only_uses_the_accessibilityservice_to_detect_app_launches_and_facilitate_the_app_blocking_feature_we_do_not_use_this_access_for_any_other_purpose">Permission Control: Limitr only uses the AccessibilityService to detect app launches and facilitate the app blocking feature. We do not use this access for any other purpose.</string>
    <string name="no_sensitive_data_access_limitr_does_not_access_collect_or_transmit_any_of_your_sensitive_data_including_personal_information_passwords_or_financial_details">No Sensitive Data Access: Limitr does not access, collect, or transmit any of your sensitive data, including personal information, passwords, or financial details.</string>
    <string name="we_want_to_emphasize_that_limitr_takes_your_privacy_and_data_security_seriously">We want to emphasize that Limitr takes your privacy and data security seriously.</string>
    <string name="AccessibilityServiceInfo">Accessibility Service Info\n</string>
    <string name="doesnot_change_user_settings">This Application does not Change user settings or prevent the ability for users to disable or uninstall any app or services.</string>
    <string name="android_inbuilt">This Application doesn\'t work around Android in-built privacy controls and notifications.</string>
    <string name="ui_leverage">This application doesn\'t change or leverage the User Interface in a way that is deceptive or otherwise violates play Developer policies.</string>
    <string name="call_audio_recording">This application doesn not remote call audio recording.</string>
    <string name="claim_referral_reward">Claim Referral Reward.</string>
    <string name="coming_soon">Coming soon!</string>

</resources>